Compilateur.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */PARSER_BEGIN(Compileur)
import java.io.InputStream;
public class Compileur {

public static void main(String args[]) {
try {
Compilateur parseur = new Compilateur(System.in);
//mainNoTerminaux
parseur.mainNT();
System.out.println("C'est bien une expression arithmetique");
} catch (TokenMgrError e) {
System.out.println("Ceci n'est pas une expression arithmetique");
} catch (ParseException e) {
System.out.println("Ceci n'est pas une expression arithmetique");
}

}

}

PARSER_END(Compileur)
SKIP : // séparateur 
{ " " | "\t" }
TOKEN :
{ < NOMBRE: ["1"-"9"] (["0"-"9"])* (".")? (["0"-"9"])*>
| < EOL: "\n" >
}
void mainNT () :
{}
{ expression() <EOL> }
void expression () :
{}
{ terme() (
"+" terme()
| "-" terme()
)*
}
void terme () :
{}
{ facteur() (
"*" facteur()
| "/" facteur()
)*
}
void facteur () :
{}
{ "(" expression() ")"
| "-" facteur()
| <NOMBRE>
}
